# Dard

./: .gitignore  .gitmodules  README.md  dub copy.json  dub.json  dub.sdl  dub.selections.json  dub.settings.json  dub2.sdl  gen_mixins.d  mixins_instantation.d  setup.d
bindings/bgfx/: .gitignore  dub.sdl
bindings/bgfx/source/: funcs.d
bindings/bgfx/source/bgfx/: funcs.d  types.d
bindings/nanovg/: dub.json  dub.sdl  dub2.sdl
bindings/nanovg/cpp_source/: CMakeLists.txt  nanovg.cpp  nanovg.h  nanovg_bgfx.cpp  nanovg_bgfx.h  nanovg_bgfx_c.cpp  nanovg_bgfx_preprocessed.c
bindings/nanovg/source/: nanovg.d  nanovg_bgfx.d
bindings/sdl/: dub.json  dub.sdl  sdl.d  sdl.dpp  sdl.h
bindings/sdl/headers/: sdl_old.d  sdl_preprocessed.h
bindings/sdl/sample/: sdl_preprocessed.c
bindings/sdl/source/: sdl.d
source/: app.d
source/dard/: package.d
source/dard/base/: component.d  context.d  entity.d  scene.d  system.d
source/dard/components/: camera.d  childs.d  graphic_object.d  transform.d
source/dard/d_wtf/: dlgt.d
source/dard/serialization/: attributes.d  serialize_mixture.d
source/dard/systems/: asset.d  broker.d  config.d  engine.d  filesystem.d  logger.d  render.d  ui.d  window.d
source/dard/systems/asset/: asset.d  binary_data.d  builtin_default_font.d  font.d  material.d  mesh.d  object3d.d  package.d  program.d  shader.d  (+1 more)
source/dard/types/: color.d  dict.d  func.d  hash_map.d  json.d  list.d  memory.d  nogc_delegate.d  notnull.d  path.d  ref_count.d  small_vector.d  smart_ptr.d  string.d  time.d  traits.d  unique.d  vector.d
source/dard/utils/: const_cast.d  static_cast.d
(+77 files in other folders)
